--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-avancado-boilerplate",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://mmartinsoliveira.github.io/mmartins.io",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -26,6 +29,7 @@
   "dependencies": {
     "@styled-icons/boxicons-logos": "^10.34.0",
     "codegen": "^0.1.0",
+    "gh-pages": "3.2.3",
     "graphql-codegen": "^0.4.0",
     "graphql-request": "^3.4.0",
     "next": "10.2.3",
