--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@styled-icons/boxicons-logos": "^10.34.0",
     "framer-motion": "^6.3.16",
     "kbar": "^0.1.0-beta.36",
-    "next": "10.2.3",
+    "next": "^12.2.0",
     "next-pwa": "^5.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
