--- a/package.json
+++ b/package.json
@@ -10,44 +10,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "test": "jest --maxWorkers=50%",
-    "test:watch": "jest --watch --maxWorkers=25%",
-    "test:ci": "jest --runInBand",
-    "generate": "yarn plop --plopfile generators/plopfile.js",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public",
-    "postinstall": "husky install",
-    "commit": "cz",
-    "codegen": "graphql-codegen --config codegen.yml"
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix",
-      "yarn test --findRelatedTests --bail"
-    ]
+    "commit": "cz"
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "@styled-icons/boxicons-logos": "^10.34.0",
     "framer-motion": "^6.3.16",
+    "gray-matter": "^4.0.3",
     "kbar": "^0.1.0-beta.36",
     "next": "^12.2.0",
     "next-pwa": "^5.2.21",
+    "next-seo": "^5.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6",
+    "remixicon": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "jest": "^27.0.4",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1"
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.0",
+    "eslint-config-prettier": "^8.3.0"
   }
 }
